# tgBotExchangeRust

./: .env  Cargo.toml
src/: main.rs
