[package]
name = "peybot_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
scraper = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
num-format = "0.4"